added shade module
