# internal/modules/v1/shade/dto/update_dto.go
@@ -1,0 +1,7 @@
+package dto
+
+type UpdateDTO struct {
+	Name      *string `json:"name" validate:"omitempty,min=3,max=255"`
+	Image     *string `json:"image" validate:"omitempty"`
+	SortIndex *int    `json:"sort_index" validate:"omitempty,min=0"`
+}
